--- a/index.html
+++ b/index.html
@@ -2,8 +2,84 @@
 <html>
 <head>
   <title></title>
+  <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script>
+  <style type="text/css">
+    .list-todos li {
+      cursor: pointer;
+    }
+
+    .list-todos li:hover {
+      color: blue;
+    }
+
+    .list-todos li.completed {
+      text-decoration: line-through;
+      opacity: 0.6;
+    }
+  </style>
 </head>
 <body>
-  Hello world?
+  <div class="container todo-app" style="margin-top: 50px;">
+    <div class="card">
+      <div class="card-header">
+        <div class="form-group">
+        <div class="input-group">
+          <input type="text" v-model="new_todo" @keyup.enter="add" placeholder="What do you want to do today?" class="form-control">
+          <button class="btn btn-primary" @click="add">Add to checklist</button>
+        </div>
+      </div>
+      </div>
+      <div class="card-body">
+        <h3>Todo Checklist</h3>
+        <p v-if="todos.length > 0">Please select from the list to complete your todo</p>
+        <ul class="list-todos">
+          <li v-for="(todo, index) in todos" :key="todo.index" :class="{completed: todo.is_completed}" @click="complete(todo)">
+            {{ todo.label }}
+          </li>
+        </ul>
+        <p v-if="todos.length == 0">Please add an item above</p>
+      </div>
+    </div>
+  </div>
+  <script type="text/javascript">
+    var todoApp = new Vue({
+      el: '.todo-app',
+      data: {
+        new_todo: '',
+        todos: []
+      },
+      methods: {
+        complete: function(todo) {
+          // when you use 'this.'' you can access data object, or the method.
+          for (var i in this.todos) {
+            if (todo == this.todos[i]) {
+              if (todo.is_completed)
+                todo.is_completed = false;
+              else
+                todo.is_completed = true;
+            }
+          }
+
+          console.log(this.todos);
+        },
+        add: function() {
+          // do a simple validation if it's empty.
+          if (!this.new_todo)
+            return alert('Input cannot be empty.');
+
+          this.todos.push({
+            label: this.new_todo,
+            is_completed: false
+          });
+
+          // then clear the input
+          this.new_todo = '';
+
+          this.$forceUpdate();
+        }
+      }
+    })
+  </script>
 </body>
 </html>
