--- a/periodic.html
+++ b/periodic.html
@@ -7,6 +7,42 @@
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js"></script>
   <style type="text/css">
+
+    @media screen and (max-width: 600px) and (orientation: portrait) {
+      /*@viewport {*/
+      /*  orientation: landscape;*/
+      /*}*/
+      html {
+        /* Rotate the content container */
+        transform: rotate(-90deg);
+        transform-origin: left top;
+        /* Set content width to viewport height */
+        width: 100vh;
+        /* Set content height to viewport width */
+        height: 100vw;
+        overflow-x: hidden;
+        position: absolute;
+        top: 100%;
+        left: 0;
+      }
+    }
+
+    /*@viewport {*/
+    /*  orientation: landscape;*/
+    /*}*/
+
+    /*@media only screen and (max-width: 600px) {*/
+    /*  body {*/
+    /*    background-color: lightblue;*/
+    /*  }*/
+
+    /*  @viewport {*/
+    /*    orientation: landscape;*/
+    /*  }*/
+    /*}*/
+
+
+
     .tp td {
       width: 5.55%;
       cursor: pointer;
