--- a/periodic.html
+++ b/periodic.html
@@ -14,8 +14,8 @@
       /*}*/
       html {
         /* Rotate the content container */
-        transform: rotate(-90deg);
-        transform-origin: left top;
+        transform: rotate(90deg);
+        transform-origin: right bottom;
         /* Set content width to viewport height */
         width: 100vh;
         /* Set content height to viewport width */
