--- a/periodic.html
+++ b/periodic.html
@@ -23,7 +23,7 @@
         overflow-x: hidden;
         position: absolute;
         top: 100%;
-        left: 0;
+        right: 0;
       }
     }
 
